docs: add descriptions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WAXTax</title>
+        <title>WAX Toolkit</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.9.0/brython.min.js">
         </script>
@@ -35,7 +35,7 @@
                     <div class="col-lg-6 mx-auto">
                         <p class="fs-5 mb-4">For the WAX Community</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a href="/whitelists"><button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Whitelist Generator!</button></a>
+                            <a href="./whitelists.html"><button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Whitelist Generator!</button></a>
                             <!-- <a href="#see-how-it-works"><button type="button" class="btn btn-outline-secondary btn-lg px-4">See how it works</button></a> -->
                     </div>
                 </div>
