docs: add descriptions

--- a/whitelists.html
+++ b/whitelists.html
@@ -30,7 +30,7 @@
 
         <div class="bg-dark text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <img class="d-block mx-auto mb-4" src="img/gold stamp.png" alt="" width="72" height="72">
+                <a href="./index.html"><img class="d-block mx-auto mb-4" src="img/gold stamp.png" alt="" width="72" height="72"></a>
                 <h1 class="display-5 fw-bold text-white">Whitelists (Beta)</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class="fs-5 mb-4">a nifty whitelist generation tool</p>
@@ -46,7 +46,7 @@
             <h1>Whitelist Generator</h1>
             <p>Click the buttons below to add requirements, and then hit the Generate Whitelist button to start!
             <br>
-            Whitelist generation may take a while for large groups of accounts (don't try generating a whitelist of everyone with R=Planet and Alien Worlds NFTs).
+            Whitelist generation may take a while, especially for large groups of accounts (don't try generating a whitelist of everyone with R=Planet and Alien Worlds NFTs).
             <br>
             I've done my best to check that this tool is accurage, but if you notice anything wrong with the whitelists, please contact me on <a href="https://discord.gg/sixpm">Discord</a>.</p>
             <button class="btn btn-primary" id="add-field">Add Requirement</button>
@@ -78,7 +78,7 @@
         </div>
         <div class="container py-5" id="featured-3">
             <h2 class="pb-2 border-bottom" id="see-how-it-works">How does it work?</h2>
-            <p>Explanation coming soon!</p>
+            <p>Explanation coming when I get some breathing space! For now, just assume it's witchcraft.</p>
             <!-- <div class="row g-5 py-5">
               <div class="feature col-md-4">
                   <img src="img/wax.png" class="img-fluid"/>
