docs: add descriptions

--- a/whitelists.html
+++ b/whitelists.html
@@ -116,6 +116,8 @@
                         <li>AtomicHub</li>
                         <li>Everyone who has supported myself, SixPM Software, and our project</li>
                     </ul>
+
+                    <p>If you've found this tool useful, please give it a shoutout on Twitter and tag <a href="https://twitter.com/stuckatsixpm">@stuckatsixpm</a> and <a href="https://twitter.com/SixPMSoftware">@SixPMSoftware</a>.</p>
                 </div>
                 </div>
           </div>
