docs: add descriptions

--- a/whitelists.html
+++ b/whitelists.html
@@ -46,7 +46,7 @@
             <h1>Whitelist Generator</h1>
             <p>Click the buttons below to add requirements, and then hit the Generate Whitelist button to start!
             <br>
-            Whitelist generation may take a while, especially for large groups of accounts (don't try generating a whitelist of everyone with R=Planet and Alien Worlds NFTs).
+            Whitelist generation may take a while, especially for large groups of accounts (don't try generating a whitelist of everyone with R-Planet and Alien Worlds NFTs).
             <br>
             I've done my best to check that this tool is accurage, but if you notice anything wrong with the whitelists, please contact me on <a href="https://discord.gg/sixpm">Discord</a>.</p>
             <button class="btn btn-primary" id="add-field">Add Requirement</button>
