docs: add descriptions

--- a/whitelists.html
+++ b/whitelists.html
@@ -149,7 +149,7 @@
                 sub_div = html.DIV(Class="input-group-prepend")
                 sub_div <= html.SPAN("hold at least",Class="input-group-text")
                 package <= sub_div 
-                package <= html.INPUT(**{"Class":"form-control","type":"text","aria-label":"type","value":"1","style":{"direction": "rtl"},"id":"amount"+str(field_count)})
+                package <= html.INPUT(**{"Class":"form-control","type":"text","aria-label":"type","value":"1","id":"amount"+str(field_count)})
                 sub_div = html.DIV(Class="input-group-prepend")
                 sub_div <= html.SPAN("NFT(s) from the",Class="input-group-text")
                 package <= sub_div
