docs: add descriptions

--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
                 </div>
             </div>
         </div>
+        <div class="container py-5" id="featured-3">
+            <h2 class="pb-2 border-bottom">Landing page under construction - use the button!</h2>
+        </div>
         
-        
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container">
+              <span class="text-muted">Built in Python with ❤️ by stuckatsixpm</span>
+            </div>
+        </footer>
 
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
