docs: minor text fixes

--- a/whitelists.html
+++ b/whitelists.html
@@ -48,7 +48,7 @@
             <br>
             Whitelist generation may take a while, especially for large groups of accounts (don't try generating a whitelist of everyone with R-Planet and Alien Worlds NFTs).
             <br>
-            I've done my best to check that this tool is accurage, but if you notice anything wrong with the whitelists, please contact me on <a href="https://discord.gg/sixpm">Discord</a>.</p>
+            I've done my best to check that this tool is accurate, but if you notice anything wrong with the whitelists, please contact me on <a href="https://discord.gg/sixpm">Discord</a>.</p>
             <button class="btn btn-primary" id="add-field">Add Requirement</button>
             <!-- <button class="btn btn-dark" id="add-blacklist">Add Blacklist</button> -->
             <button class="btn btn-success" id="generate-whitelist-btn">Generate Whitelist</button>
@@ -106,6 +106,7 @@
                     <h2>Upcoming features</h2>
                     <ul>
                         <li>Blacklisting based on wallet address and NFTs held</li>
+                        <li>Data analysis option to list how many NFTs a wallet holds in each criteria</l1>
                     </ul>
                 </div>
                 <div class="col-md-5 align-text-top">
