--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <div class="col-lg-6 mx-auto">
                         <p class="fs-5 mb-4">For the WAX Community</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a href="./whitelists.html"><button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Whitelist Generator!</button></a>
+                            <a href="./whitelists.html"><button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Whitelist Generator</button></a>
+                            <a href="./interactions.html"><button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Pack Opens</button></a>
                             <!-- <a href="#see-how-it-works"><button type="button" class="btn btn-outline-secondary btn-lg px-4">See how it works</button></a> -->
                     </div>
                 </div>
