API endpoint update

--- a/whitelists.html
+++ b/whitelists.html
@@ -163,7 +163,7 @@
                     data = (document["type"+i].value,document["id"+i].value,document["amount"+i].value)
                     responses.append(data)
 
-                endpoint = "https://wax.api.atomicassets.io/atomicassets/v1/accounts?limit=5000&order=desc"
+                endpoint = "https://aa.neftyblocks.com/atomicassets/v1/accounts?limit=5000&order=desc"
                 whitelist = []
                 for search in responses:
                     page = 0
