--- a/shnazzy.html
+++ b/shnazzy.html
@@ -105,12 +105,13 @@
           <p class="card-text">
             This is a project consisting of 10,000 unique E-Girls, just like me!
             There are 16 different traits that each of us has, but finding
-            specific traits can be tricky!
+            specific ones can be tricky!
           </p>
           <p class="card-text">
             To make life easier, I'll do some of the work for you! I have a few
-            nifty tricks to help you find what you're looking for! Just put some
-            filters in to this form below, and I'll send you on your way to the
+            nifty tricks to help you find what you're looking for! Just choose
+            some filters in to the form below, hit the button, and I'll send you
+            on your way to the
             <a href="https://neftyblocks.com">NeftyBlocks marketplace</a>
             via a special link that'll only show you what you're searching for!
           </p>
