--- a/shnazzy.html
+++ b/shnazzy.html
@@ -20,6 +20,12 @@
         border-radius: 2em;
         box-shadow: 0 5px 10px #8003b8, 0 2px 4px #ffffff;
       }
+      .input-group > .input-group-prepend {
+        flex: 0 0 20%;
+      }
+      .input-group .input-group-text {
+        width: 100%;
+      }
       .input-group-text {
         background-color: #302030;
         border-color: #424242;
@@ -49,7 +55,7 @@
         background-color: #422142;
         color: aliceblue;
       }
-      </style>
+    </style>
   </head>
   <body>
     <div
