--- a/shnazzy.html
+++ b/shnazzy.html
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <div class="px-2 container">
+    <div class="container">
       <form
         action="https://neftyblocks.com/c/shnazzegirls/marketplace"
         method="GET"
@@ -130,10 +130,10 @@
         <input type="hidden" name="order" value="asc" />
         <div style="box-shadow: 0 3px 6px #8003b8, 0 2px 4px #ffffff">
           <div class="input-group">
-            <div class="input-group-prepend col-3">
-              <span class="input-group-text">Background</span>
+            <div class="input-group-prepend">
+              <span class="input-group-text" style="float: right;">Background</span>
             </div>
-            <select class="form-control col-9" name="data.Background">
+            <select class="form-control" name="data.Background">
               <option value="" selected>Any</option>
               <option value="Blue">Blue (1100)</option>
               <option value="Blue Artist">Blue Artist (270)</option>
@@ -159,10 +159,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Chair</span>
             </div>
-            <select class="form-control col-9" name="data.Chair">
+            <select class="form-control" name="data.Chair">
               <option value="" selected>Any</option>
               <option value="Black Gaming">Black Gaming (1000)</option>
               <option value="Black Office">Black Office (700)</option>
@@ -180,10 +180,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Body Base</span>
             </div>
-            <select class="form-control col-9" name="data.Body Base">
+            <select class="form-control" name="data.Body Base">
               <option value="" selected>Any</option>
               <option value="Alien">Alien (50)</option>
               <option value="Blue">Blue (400)</option>
@@ -204,19 +204,19 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Blush</span>
             </div>
-            <select class="form-control col-9" name="data.Blush">
+            <select class="form-control" name="data.Blush">
               <option value="" selected>Any</option>
               <option value="Blush">5000</option>
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Accessories</span>
             </div>
-            <select class="form-control col-9" name="data.Accessories">
+            <select class="form-control" name="data.Accessories">
               <option value="" selected>Any</option>
               <option value="Choker">Choker (900)</option>
               <option value="Collar">Collar (900)</option>
@@ -239,10 +239,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Nails</span>
             </div>
-            <select class="form-control col-9" name="data.Nails">
+            <select class="form-control" name="data.Nails">
               <option value="" selected>Any</option>
               <option value="Black Nails">Black Nails (2500)</option>
               <option value="Purple Nails">Purple Nails (2500)</option>
@@ -250,10 +250,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Bottoms</span>
             </div>
-            <select class="form-control col-9" name="data.Bottoms">
+            <select class="form-control" name="data.Bottoms">
               <option value="" selected>Any</option>
               <option value="Black Jeans">Black Jeans (1055)</option>
               <option value="Black Leggings">Black Leggings (1055)</option>
@@ -274,10 +274,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Shirts</span>
             </div>
-            <select class="form-control col-9" name="data.Shirts">
+            <select class="form-control" name="data.Shirts">
               <option value="" selected>Any</option>
               <option value="Black Alien Tee">Black Alien Tee (221)</option>
               <option value="Black Collared Blouse">
@@ -383,10 +383,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Hair</span>
             </div>
-            <select class="form-control col-9" name="data.Hair">
+            <select class="form-control" name="data.Hair">
               <option value="" selected>Any</option>
               <option value="Black and Blonde Curled Bob">
                 Black and Blonde Curled Bob (132)
@@ -527,10 +527,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Eyebrows</span>
             </div>
-            <select class="form-control col-9" name="data.Eyebrows">
+            <select class="form-control" name="data.Eyebrows">
               <option value="" selected>Any</option>
               <option value="Eyebows with Pircing">
                 Eyebows with Pircing (505)
@@ -547,10 +547,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Eyes</span>
             </div>
-            <select class="form-control col-9" name="data.Eyes">
+            <select class="form-control" name="data.Eyes">
               <option value="" selected>Any</option>
               <option value="Blue Eyes_1">Blue Eyes_1 (550)</option>
               <option value="Blue Eyes_2">Blue Eyes_2 (550)</option>
@@ -575,10 +575,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Nose</span>
             </div>
-            <select class="form-control col-9" name="data.Nose">
+            <select class="form-control" name="data.Nose">
               <option value="" selected>Any</option>
               <option value="Nose with Piercings_1">
                 Nose with Piercings_1 (100)
@@ -602,10 +602,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Mouth</span>
             </div>
-            <select class="form-control col-9" name="data.Mouth">
+            <select class="form-control" name="data.Mouth">
               <option value="" selected>Any</option>
               <option value="Blue Gloss">Blue Gloss (500)</option>
               <option value="Brown Gloss 1">Brown Gloss 1 (500)</option>
@@ -632,10 +632,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Glasses</span>
             </div>
-            <select class="form-control col-9" name="data.Glasses">
+            <select class="form-control" name="data.Glasses">
               <option value="" selected>Any</option>
               <option value="3D">3D (100)</option>
               <option value="Cat Eye">Cat Eye (1000)</option>
@@ -644,10 +644,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Headset</span>
             </div>
-            <select class="form-control col-9" name="data.Headset">
+            <select class="form-control" name="data.Headset">
               <option value="" selected>Any</option>
               <option value="Basic Black">Basic Black (370)</option>
               <option value="Black Gaming">Black Gaming (390)</option>
@@ -668,10 +668,10 @@
             </select>
           </div>
           <div class="input-group">
-            <div class="input-group-prepend col-3">
+            <div class="input-group-prepend">
               <span class="input-group-text">Handheld</span>
             </div>
-            <select class="form-control col-9" name="data.Handheld">
+            <select class="form-control" name="data.Handheld">
               <option value="" selected>Any</option>
               <option value="Banana">Banana (100)</option>
               <option value="Black and Green Controller">
