remove underscores from Shnazzy

--- a/shnazzy.html
+++ b/shnazzy.html
@@ -115,6 +115,8 @@
             <a href="https://neftyblocks.com">NeftyBlocks marketplace</a>
             via a special link that'll only show you what you're searching for!
           </p>
+
+          <p class="card-text">Also, Body Base filtering is currently broken, but we'll have it online as soon as we can!</p>
         </div>
       </div>
     </div>
@@ -187,18 +189,18 @@
             <option value="" selected>Any</option>
               <option value="Alien">Alien (50)</option>
               <option value="Blue">Blue (400)</option>
-              <option value="Body_1">Body_1 (750)</option>
-              <option value="Body_2">Body_2 (750)</option>
-              <option value="Body_3">Body_3 (750)</option>
-              <option value="Body_4">Body_4 (750)</option>
-              <option value="Body_5">Body_5 (750)</option>
-              <option value="Body_6">Body_6 (750)</option>
-              <option value="Body_7">Body_7 (750)</option>
-              <option value="Body_8">Body_8 (750)</option>
-              <option value="Body_9">Body_9 (750)</option>
-              <option value="Body_10">Body_10 (750)</option>
-              <option value="Body_11">Body_11 (750)</option>
-              <option value="Body_12">Body_12 (750)</option>
+              <option value="Body 1">Body 1 (750)</option>
+              <option value="Body 2">Body 2 (750)</option>
+              <option value="Body 3">Body 3 (750)</option>
+              <option value="Body 4">Body 4 (750)</option>
+              <option value="Body 5">Body 5 (750)</option>
+              <option value="Body 6">Body 6 (750)</option>
+              <option value="Body 7">Body 7 (750)</option>
+              <option value="Body 8">Body 8 (750)</option>
+              <option value="Body 9">Body 9 (750)</option>
+              <option value="Body 10">Body 10 (750)</option>
+              <option value="Body 11">Body 11 (750)</option>
+              <option value="Body 12">Body 12 (750)</option>
               <option value="Pink">Pink (500)</option>
               <option value="Reptillian">Reptillian (50)</option>
             </select>
@@ -413,15 +415,15 @@
             <select class="form-select" name="data.Eyebrows">
             <option value="" selected>Any</option>
               <option value="Eyebows with Pircing">Eyebows with Pircing (505)</option>
-              <option value="Eyebrows_1">Eyebrows_1 (1055)</option>
-              <option value="Eyebrows_2">Eyebrows_2 (1055)</option>
-              <option value="Eyebrows_3">Eyebrows_3 (1055)</option>
-              <option value="Eyebrows_4">Eyebrows_4 (1055)</option>
-              <option value="Eyebrows_5">Eyebrows_5 (1055)</option>
-              <option value="Eyebrows_6">Eyebrows_6 (1055)</option>
-              <option value="Eyebrows_7">Eyebrows_7 (1055)</option>
-              <option value="Eyebrows_8">Eyebrows_8 (1055)</option>
-              <option value="Eyebrows_9">Eyebrows_9 (1055)</option>
+              <option value="Eyebrows 1">Eyebrows 1 (1055)</option>
+              <option value="Eyebrows 2">Eyebrows 2 (1055)</option>
+              <option value="Eyebrows 3">Eyebrows 3 (1055)</option>
+              <option value="Eyebrows 4">Eyebrows 4 (1055)</option>
+              <option value="Eyebrows 5">Eyebrows 5 (1055)</option>
+              <option value="Eyebrows 6">Eyebrows 6 (1055)</option>
+              <option value="Eyebrows 7">Eyebrows 7 (1055)</option>
+              <option value="Eyebrows 8">Eyebrows 8 (1055)</option>
+              <option value="Eyebrows 9">Eyebrows 9 (1055)</option>
             </select>
           </div>
           <div class="input-group">
@@ -430,25 +432,25 @@
             </div>
             <select class="form-select" name="data.Eyes">
             <option value="" selected>Any</option>
-              <option value="Blue Eyes_1">Blue Eyes_1 (550)</option>
-              <option value="Blue Eyes_2">Blue Eyes_2 (550)</option>
-              <option value="Blue Eyes_3">Blue Eyes_3 (550)</option>
-              <option value="Blue Eyes_4">Blue Eyes_4 (550)</option>
-              <option value="Blue Eyes_5">Blue Eyes_5 (550)</option>
-              <option value="Blue Eyes_6">Blue Eyes_6 (550)</option>
+              <option value="Blue Eyes 1">Blue Eyes 1 (550)</option>
+              <option value="Blue Eyes 2">Blue Eyes 2 (550)</option>
+              <option value="Blue Eyes 3">Blue Eyes 3 (550)</option>
+              <option value="Blue Eyes 4">Blue Eyes 4 (550)</option>
+              <option value="Blue Eyes 5">Blue Eyes 5 (550)</option>
+              <option value="Blue Eyes 6">Blue Eyes 6 (550)</option>
               <option value="Blue Green Eyes">Blue Green Eyes (50)</option>
-              <option value="Brown Eyes_1">Brown Eyes_1 (550)</option>
-              <option value="Brown Eyes_2">Brown Eyes_2 (550)</option>
-              <option value="Brown Eyes_3">Brown Eyes_3 (550)</option>
-              <option value="Brown Eyes_4">Brown Eyes_4 (550)</option>
-              <option value="Brown Eyes_5">Brown Eyes_5 (550)</option>
-              <option value="Brown Eyes_6">Brown Eyes_6 (550)</option>
-              <option value="Brown Eyes_7">Brown Eyes_7 (550)</option>
-              <option value="Brown Eyes_8">Brown Eyes_8 (550)</option>
-              <option value="Brown Eyes_9">Brown Eyes_9 (550)</option>
-              <option value="Green Eyes_1">Green Eyes_1 (550)</option>
-              <option value="Green Eyes_2">Green Eyes_2 (550)</option>
-              <option value="Green Eyes_3">Green Eyes_3 (550)</option>
+              <option value="Brown Eyes 1">Brown Eyes 1 (550)</option>
+              <option value="Brown Eyes 2">Brown Eyes 2 (550)</option>
+              <option value="Brown Eyes 3">Brown Eyes 3 (550)</option>
+              <option value="Brown Eyes 4">Brown Eyes 4 (550)</option>
+              <option value="Brown Eyes 5">Brown Eyes 5 (550)</option>
+              <option value="Brown Eyes 6">Brown Eyes 6 (550)</option>
+              <option value="Brown Eyes 7">Brown Eyes 7 (550)</option>
+              <option value="Brown Eyes 8">Brown Eyes 8 (550)</option>
+              <option value="Brown Eyes 9">Brown Eyes 9 (550)</option>
+              <option value="Green Eyes 1">Green Eyes 1 (550)</option>
+              <option value="Green Eyes 2">Green Eyes 2 (550)</option>
+              <option value="Green Eyes 3">Green Eyes 3 (550)</option>
               <option value="Purple Eyes">Purple Eyes (50)</option>
             </select>
           </div>
@@ -458,19 +460,19 @@
             </div>
             <select class="form-select" name="data.Nose">
             <option value="" selected>Any</option>
-              <option value="Nose with Piercings_1">Nose with Piercings_1 (100)</option>
-              <option value="Nose with Piercings_2">Nose with Piercings_2 (500)</option>
-              <option value="Nose with Piercings_3">Nose with Piercings_3 (400)</option>
-              <option value="Nose_1">Nose_1 (900)</option>
-              <option value="Nose_2">Nose_2 (900)</option>
-              <option value="Nose_3">Nose_3 (900)</option>
-              <option value="Nose_4">Nose_4 (900)</option>
-              <option value="Nose_5">Nose_5 (900)</option>
-              <option value="Nose_6">Nose_6 (900)</option>
-              <option value="Nose_7">Nose_7 (900)</option>
-              <option value="Nose_8">Nose_8 (900)</option>
-              <option value="Nose_9">Nose_9 (900)</option>
-              <option value="Nose_10">Nose_10 (900)</option>
+              <option value="Nose with Piercings 1">Nose with Piercings 1 (100)</option>
+              <option value="Nose with Piercings 2">Nose with Piercings 2 (500)</option>
+              <option value="Nose with Piercings 3">Nose with Piercings 3 (400)</option>
+              <option value="Nose 1">Nose 1 (900)</option>
+              <option value="Nose 2">Nose 2 (900)</option>
+              <option value="Nose 3">Nose 3 (900)</option>
+              <option value="Nose 4">Nose 4 (900)</option>
+              <option value="Nose 5">Nose 5 (900)</option>
+              <option value="Nose 6">Nose 6 (900)</option>
+              <option value="Nose 7">Nose 7 (900)</option>
+              <option value="Nose 8">Nose 8 (900)</option>
+              <option value="Nose 9">Nose 9 (900)</option>
+              <option value="Nose 10">Nose 10 (900)</option>
             </select>
           </div>
           <div class="input-group">
