remove underscores from Shnazzy

--- a/shnazzy.html
+++ b/shnazzy.html
@@ -460,9 +460,9 @@
             </div>
             <select class="form-select" name="data.Nose">
             <option value="" selected>Any</option>
-              <option value="Nose with Piercings 1">Nose with Piercings 1 (100)</option>
-              <option value="Nose with Piercings 2">Nose with Piercings 2 (500)</option>
-              <option value="Nose with Piercings 3">Nose with Piercings 3 (400)</option>
+              <option value="Nose with Piercings_1">Nose with Piercings 1 (100)</option>
+              <option value="Nose with Piercings_2">Nose with Piercings 2 (500)</option>
+              <option value="Nose with Piercings_3">Nose with Piercings 3 (400)</option>
               <option value="Nose 1">Nose 1 (900)</option>
               <option value="Nose 2">Nose 2 (900)</option>
               <option value="Nose 3">Nose 3 (900)</option>
