--- a/shnazzy.html
+++ b/shnazzy.html
@@ -854,6 +854,7 @@
           data = req.json["data"]
           if not data:
             document["stats-text"] <= html.P("No results found (⌣̩̩́_⌣̩̩̀)")
+            return
           # parse sales
           timestamps = []
           prices = []
