--- a/shnazzy.html
+++ b/shnazzy.html
@@ -853,7 +853,7 @@
           
           data = req.json["data"]
           if not data:
-            document["stats-text"] <= html.P("No results found (⌣̩̩́_⌣̩̩̀)")
+            document["stats-text"] <= html.P("No results found (T-T)")
             return
           # parse sales
           timestamps = []
